<resources>
    <string name="app_name">TeacherApp</string>
    <string name="total_attendence">TOTAL ATTENDENCE</string>
    <string name="otp">OTP</string>
    <string name="otp_will_be_deleted_20_sec_after_generation">OTP will be deleted 20 sec after generation</string>
    <string name="generate_otp">GENERATE OTP</string>
    <string name="signup_now">Signup Now</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="eche18001">ECHE18001</string>
    <string name="abhinav_dwivedi">ABHINAV DWIVEDI</string>
    <string name="_00">00</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="login_now">Login Now</string>
    <string name="name">Name</string>
    <string name="complete_profile">Complete Profile</string>
    <string name="subject">Subject</string>
    <string name="next">Next</string>
    <string name="subject_details">Subject Details</string>
    <string name="total_number_of_lectures_in_semester">Total number of lectures in semester</string>
    <string name="finish">Finish</string>
    <string name="no_of_lecture_in_a_week">No. of lecture in a week</string>
    <string name="select">SELECT</string>
    <string name="total">Total</string>
    <string name="student_info">Student Info</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">sign_up</string>
    <string name="btn_reset_password">btn_reset_password</string>
    <string name="hint_email">hint_email</string>
    <string name="forgot_password_msg">forgot_password_msg</string>
    <string name="lbl_forgot_password">lbl_forgot_password</string>
    <string name="back">Back</string>
</resources>
